package exercise.ex01.codes.after;

public abstract class EmailContent {

    public abstract String getContent();

}
